create separate graph pages and modify gruntfile accordingly

--- a/nbn/app/graph1.html
+++ b/nbn/app/graph1.html
@@ -20,10 +20,7 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-
-    <a href="/graph1.html">graph1</a>
-    <a href="/graph2.html">graph2</a>
-    <a href="/graph3.html">graph3</a>
+    <div id="graph1" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
