try to copy data folder in gruntfile but fail at it

--- a/nbn/app/index.html
+++ b/nbn/app/index.html
@@ -21,9 +21,9 @@
     <![endif]-->
 
 
-    <a href="/graph1.html">graph1</a>
-    <a href="/graph2.html">graph2</a>
-    <a href="/graph3.html">graph3</a>
+    <a href="graph1.html">graph1</a>
+    <a href="graph2.html">graph2</a>
+    <a href="graph3.html">graph3</a>
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
