--- a/nbn/app/index.html
+++ b/nbn/app/index.html
@@ -30,6 +30,7 @@
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/underscore/underscore.js"></script>
     <script src="bower_components/highstock/js/highstock.src.js"></script>
+    <script src="bower_components/highstock/js/highcharts-more.src.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
